change portfolio picture

--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -10,7 +10,9 @@
     <a href="about.html">About</a>
     <h1>This is my Portfolio Page!</h1>
     <img src="images/portfolio.jpg" height="250">
-    
+        
+  
+ <h2> Scratch Projects </h2>
     <br>
     <a target="_blank" href="https://scratch.mit.edu">
       <img src="images/scratchlogo.png" height="100">
@@ -19,6 +21,7 @@
    <a href= "https://scratch.mit.edu/projects/172080915/">
         My First Scratch Project click here </a>
   
+  <h2> MIT APP Inventor - Shooter Game </h2>
   <br>
     <a target="_blank" href="projects/ShooterGame_Modified_Backup2.apk">
       <img src="images/MITAPPshootergame.PNG" height="100">
