--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -9,7 +9,7 @@
     <a href="portfolio.html">Portfolio</a>
     <a href="about.html">About</a>
     <h1>This is my Portfolio Page!</h1>
-    <img src="images/portfolio.jpg" height="250">
+    <img src="images/MyPortfolio.png" height="250">
         
   
  <h2> Scratch Projects </h2>
